Replaces common gradle configs with custom plugins.