@@ -1,22 +1,19 @@
-import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
     kotlin("jvm")
-    id("org.jetbrains.kotlin.plugin.noarg")
-    id("org.jetbrains.dokka")
-    id("kotlinx-serialization")
+    id("org.knowledger.plugin.base")
     application
 }
 
 repositories {
-    maven("https://kotlin.bintray.com/ktor")
     maven("https://jade.tilab.com/maven")
 }
 
-dependencies {
-    implementation(kotlin("stdlib", Versions.kotlin))
+baseJVM {
+    packageName = "org.knowledger.example"
+    module = "example"
+}
 
+dependencies {
     //Project dependencies
     implementation(project(":ledger"))
     implementation(project(":ledger-core"))
@@ -26,44 +23,6 @@ dependencies {
         implementation(it)
     }
 
-    //Standard dependencies
-    Libs.tinylog.forEach {
-        implementation(it)
-    }
-
     //Test dependencies
-    testImplementation(Libs.assertK)
     testImplementation(Libs.commonsRNG)
-    testImplementation(Libs.jUnitApi)
-    Libs.jUnitRuntime.forEach {
-        testRuntimeOnly(it)
-    }
-}
-
-tasks {
-    dokka {
-        outputFormat = "html"
-        outputDirectory = "$buildDir/javadoc"
-    }
-
-
-    withType<JavaExec> {
-        jvmArgs("-Djdk.attach.allowAttachSelf=true")
-    }
-
-    withType<Test> {
-        useJUnitPlatform {
-            includeEngines("junit-jupiter")
-        }
-    }
-
-    withType<KotlinCompile> {
-        kotlinOptions.freeCompilerArgs += "-XXLanguage:+InlineClasses"
-        kotlinOptions.jvmTarget = "1.8"
-    }
-}
-
-
-sourceSets["main"].withConvention(KotlinSourceSet::class) {
-    kotlin.srcDir("${buildDir.absolutePath}/generated/source/kaptKotlin/")
 }
