@@ -1,12 +1,13 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 version = "0.1"
 
 plugins {
     kotlin("jvm")
-    id("org.jetbrains.kotlin.plugin.serialization")
-    id("org.jetbrains.kotlin.plugin.noarg")
-    id("org.jetbrains.dokka")
+    id("org.knowledger.plugin.base")
+}
+
+baseJVM {
+    packageName = "org.knowledger.ledger"
+    module = "ledger"
 }
 
 dependencies {
@@ -15,67 +16,11 @@ dependencies {
     implementation(project(":ledger-orient"))
     implementation(project(":ledger-crypto"))
 
-    //Regular dependencies
-    implementation(kotlin("stdlib", Versions.kotlin))
-    implementation(Libs.serialization)
-    Libs.tinylog.forEach {
-        implementation(it)
-    }
-
-
-    //Test dependencies
-    testImplementation(Libs.assertK)
     testImplementation(Libs.commonsRNG)
-    testImplementation(Libs.jUnitApi)
     testImplementation(project(":ledger-core")) {
         capabilities {
             // Indicate we want a variant with a specific capability
             requireCapability("org.knowledger.ledger.core:test")
         }
-    }
-    Libs.jUnitRuntime.forEach {
-        testRuntimeOnly(it)
-    }
-}
-
-tasks {
-    dokka {
-        moduleName = "ledger"
-        outputFormat = "html"
-        outputDirectory = "$buildDir/javadoc"
-
-        jdkVersion = 8
-
-        // Specifies the location of the project source code on the Web.
-        // If provided, Dokka generates "source" links for each declaration.
-        // Repeat for multiple mappings
-        linkMapping {
-            // Unix based directory relative path to the root of the project
-            // (where you execute gradle respectively).
-            dir = "src/main/kotlin"
-
-            // URL showing where the source code can be accessed through the
-            // web browser.
-            url = "https://github.com/Seriyin/KnowLedger/blob/master/ledger/src/main/kotlin"
-
-            // Suffix which is used to append the line number to the URL.
-            // Use #L for GitHub.
-            suffix = "#L"
-        }
-
-    }
-
-    withType<JavaExec> {
-        jvmArgs("-Djdk.attach.allowAttachSelf=true")
-    }
-
-    withType<Test> {
-        useJUnitPlatform {
-            includeEngines("junit-jupiter")
-        }
-    }
-
-    withType<KotlinCompile> {
-        kotlinOptions.jvmTarget = "1.8"
     }
 }
